extract estimator interface

--- a/3-ImuESKF/CMakeLists.txt
+++ b/3-ImuESKF/CMakeLists.txt
@@ -30,5 +30,5 @@ catkin_package(
         INCLUDE_DIRS include
 )
 
-add_executable(imu_eskf_demo main.cpp)
+add_executable(imu_eskf_demo main.cpp simple_estimator.cc)
 target_link_libraries(imu_eskf_demo ${catkin_LIBRARIES} ${CERES_LIBRARIES} ${PCL_LIBRARIES} ${Protobuf_LIBRARIES})
